plugins {
	id 'fabric-loom' version '1.3-SNAPSHOT'
	id 'maven-publish'
	id 'com.github.johnrengelman.shadow' version '7.1.2'
}




version = project.mod_version
group = project.maven_group

base {
	archivesBaseName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	//gekolib

	maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
	//Locki
	maven {
		name = 'Ladysnake Mods'
		url = 'https://maven.ladysnake.org/releases'
	}
	maven {
		name = "Nexus Repository Manager"
		url = 'https://oss.sonatype.org/content/repositories/snapshots'
	}

	//myron
	maven { url = "https://hephaestus.dev/release" }
	mavenLocal()

	maven {url = "https://maven.kyrptonaught.dev"}
	maven { url = "https://oss.sonatype.org/content/repositories/releases/" }
	maven { url = "https://maven.dblsaiko.net/" }
	maven { url = "https://server.bbkr.space:8081/artifactory/libs-release/" }
	///other obj libraries
	maven {
		name = 'Ladysnake Mods'
		url = 'https://maven.ladysnake.org/releases'
		content {
			includeGroup 'io.github.ladysnake'
			includeGroup 'org.ladysnake'
			includeGroupByRegex 'dev\\.onyxstudios.*'
		}
	}
	//ASM
	maven { url 'https://jitpack.io' }
	repositories {
		maven {
			name = "FelNull Maven"
			url = "https://maven.felnull.dev"
		}
	}


}
shadowJar {

}
dependencies {
    // To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	//include "com.github.Chocohead:Fabric-ASM:v${asm_version}"
	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	modImplementation "software.bernie.geckolib:geckolib-fabric-1.20.1:${geko_version}"
	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-world:${cca_version}"
	//modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-util:${cca_version}"
	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-level:${cca_version}"
	//include "dev.onyxstudios.cardinal-components-api:cardinal-components-world:${cca_version}"
	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cca_version}"
	//include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cca_version}"
	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cca_version}"
	//include "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cca_version}"
	//include "dev.onyxstudios.cardinal-components-api:cardinal-components-level:${cca_version}"
	//include "dev.onyxstudios.cardinal-components-api:cardinal-components-util:${cca_version}"
	include modApi("teamreborn:energy:${energy_api_version}") {
		exclude(group: "net.fabricmc.fabric-api")
	}

	modApi "dev.felnull:special-model-loader:${obj}"
	include "dev.felnull:special-model-loader:${obj}"

}
sourceSets{
	main {
		compileClasspath += main.compileClasspath
		runtimeClasspath += main.runtimeClasspath
		resources{
			srcDirs+=[
				'src/main/generated'
			]
		}
	}
}
processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17

}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This blocks does NOT have the same function as the blocks in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
loom{

	runs{

	datagenClient{
		inherit client
		name "Data Generation"
		vmArg "-Dfabric-api.datagen"
		vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
		//vmArg "-Dfabric-api.datagen.strict-validation"
		vmArg "-Dfabric-api.datagen.modid=${modid}"
		//ideConfigGenerated = true
		runDir "build/datagen"
		//source sourceSets.main

		}
	}
}
